--- a/Task 3/style.css
+++ b/Task 3/style.css
@@ -59,3 +59,36 @@
   border-radius: 5px;
   background-color: #fff;
 }
+
+#output {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+#output .user {
+  width: 100%;
+  margin: 25px 0;
+  padding: 15px;
+  border-radius: 5px;
+  background-color: #f5f5f5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#output .user img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: 15px;
+}
+
+#output .user h3 {
+  color: #222;
+  font-size: 1.5em;
+}
+
+
